Fixing images from not showing on Github Pages

--- a/static/css/text.css
+++ b/static/css/text.css
@@ -7,28 +7,20 @@
 
 
 .erasmus-animated-bg-wrapper {
-    /* Apply the gradient as a background to the span */
     background: linear-gradient(270deg, #66ccff, #9933ff, #ff3399, #66ccff);
-    background-size: 400% 400%; /* Makes the gradient larger for smooth animation */
+    background-size: 400% 400%; /* smooth? */
     
     /* Clip the background to the text */
-    -webkit-background-clip: text; /* For Safari/Chrome */
+    -webkit-background-clip: text;
     background-clip: text;
     
-    /* Make the text color transparent so the background shows through */
+    /* Having the text color transparent so the background shows through */
     color: transparent;
     
-    /* Apply the animation to the background of the span */
     animation: fluidBackgroundShift 10s ease infinite;
     
-    /* Ensures the span behaves correctly for background clipping */
     display: inline-block; 
 }
-
-/* 
-   The ::before pseudo-element is not needed for the text color gradient effect.
-   You can remove the .erasmus-animated-bg-wrapper::before rule if it's not used for anything else.
-*/
 
 @keyframes fluidBackgroundShift {
     0% {
